# bevy-intl

./: Cargo.toml  README.md  build.rs
src/: lib.rs
