[package]
name = "bevy-intl"
version = "0.2.2"
edition = "2024"
description = "A custom Bevy plugin for adding traductions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DelsarteAdam/bevy-intl"
authors = ["Delsarte Adam"]
readme = "README.md"


[features]
default = []
bundle-only = []

[dependencies]
bevy = "0.17.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.1"
regex = "1.11.1"
once_cell = "1.21.3"

[build-dependencies]
serde_json = "1.0.1"
anyhow = "1.0.99"

