[package]
name = "bevy-intl"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "A custom Bevy plugin for adding translations (i18n) with WASM support, plurals, gender, and reactive UI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DelsarteAdam/bevy-intl"
authors = ["Delsarte Adam"]
readme = "README.md"


[features]
default = []
bundle-only = []

[dependencies]
bevy = "^0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
intl_pluralrules = "7"
unic-langid = "0.9"

[build-dependencies]
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
tracing-test = "0.2"
pretty_assertions = "1"
